Sall update to functions, comments + coorrection sunspot dataset loading

--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -59,52 +59,24 @@
     "\n",
     "* MackeyGlass\n",
     "* Lorenz\n",
-    "* Sunspots"
+    "* Sunspot"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "4749e53c-ae25-418c-bf66-2c822ec07982",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-09-03T14:48:30.053784Z",
-     "iopub.status.busy": "2024-09-03T14:48:30.053643Z",
-     "iopub.status.idle": "2024-09-03T14:48:32.316837Z",
-     "shell.execute_reply": "2024-09-03T14:48:32.316460Z",
-     "shell.execute_reply.started": "2024-09-03T14:48:30.053773Z"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d92e8516-e9a1-4f8c-94b2-76753ab3e691",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from datasets.load_datasets import load_dataset_prediction\n",
     "is_instances_classification = False\n",
-    "dataset_name = \"Lorenz\"\n",
+    "dataset_name = \"Sunspot\"\n",
     "step_ahead=5\n",
     "\n",
     "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test = load_dataset_prediction(dataset_name, step_ahead, visualize=True)\n",
     "use_spectral_representation = False\n",
     "spectral_representation = None # Can be None, \"stft\" or \"mfcc\"\n"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "2c55950a-9913-41bf-bcb8-9bde97e2bb8b",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-09-03T14:48:32.317519Z",
-     "iopub.status.busy": "2024-09-03T14:48:32.317355Z",
-     "iopub.status.idle": "2024-09-03T14:48:32.441549Z",
-     "shell.execute_reply": "2024-09-03T14:48:32.441217Z",
-     "shell.execute_reply.started": "2024-09-03T14:48:32.317508Z"
-    }
-   },
-   "source": [
-    "\n",
-    "fig, ax = plt.subplots(figsize=(16, 5))\n",
-    "ax.plot(range(2000), X_train_raw[:2000])\n",
-    "plt.plot(range(2000), Y_train_raw[:2000], c=\"orange\")\n",
-    "ax.spines['top'].set_visible(False)\n",
-    "ax.spines['right'].set_visible(False)\n",
-    "ax.tick_params(axis='both', labelsize=20)\n"
    ]
   },
   {
@@ -265,13 +237,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "780782d5-528c-4b4a-b4bb-c49ddf2c485d",
+   "cell_type": "raw",
+   "id": "092e8ef6-18df-48d1-8dc5-5f7163a53625",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
    "source": [
     "from datasets.load_datasets import load_dataset_classification\n",
     "is_instances_classification = True\n",
@@ -282,35 +252,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cfe45b5a-359e-42be-9a86-bcbf59371de0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets.preprocessing import plot_data_distribution\n",
-    "\n",
-    "if is_instances_classification:\n",
-    "    plot_data_distribution(Y_train_raw, Y_test, val = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8135f697-1881-4089-a8ba-6ef05219fad3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if use_spectral_representation and not is_multivariate:\n",
-    "    raise ValueError(\"Cannot be spectral and not multivariate\")\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "af55bde5-5bb3-41ea-ae0d-10d7bc7401f4",
    "metadata": {},
    "source": [
     "# Cross validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4873964-dc3e-4a43-ba84-fe73d228a47c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets.preprocessing import plot_data_distribution\n",
+    "\n",
+    "# Plot data distribution\n",
+    "if is_instances_classification:\n",
+    "    plot_data_distribution(Y_train_raw, Y_test, val = False)\n"
    ]
   },
   {
@@ -330,7 +290,7 @@
     "\n",
     "use_cross_validation = False\n",
     "\n",
-    "if use_cross_validation:\n",
+    "if use_cross_validation: # we split train between train and val\n",
     "    if is_instances_classification:\n",
     "        if groups is None:\n",
     "            splits = StratifiedKFold(n_splits=2, shuffle=True, random_state=SEED).split(X_train_raw, np.argmax(Y_train_raw, axis=1))\n",
@@ -353,7 +313,7 @@
     "\n",
     "    if is_instances_classification:\n",
     "        plot_data_distribution(Y_train, Y_val, val = True)\n",
-    "else: \n",
+    "else: # then we use the test dataset\n",
     "    if is_multivariate:\n",
     "        X_train_band, X_test_band = X_train_raw, X_test_raw\n",
     "        del X_train_raw, X_test_raw\n",
@@ -407,7 +367,6 @@
     "flat_train_data = np.concatenate(freq_train_data, axis=0) if is_instances_classification else freq_train_data\n",
     "\n",
     "WINDOW_LENGTH = 10\n",
-    "sampling_rate = 10000\n",
     "\n",
     "smoothed_peaks_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, smooth=True, window_length=WINDOW_LENGTH, threshold=1e-5, nperseg=1024, visualize=True)\n",
     "nb_smoothed = len(smoothed_peaks_freqs[0]) if is_multivariate else len(smoothed_peaks_freqs)\n",
@@ -459,7 +418,7 @@
     "    else:\n",
     "        X_test_band = generate_multivariate_dataset(\n",
     "            X_test_band, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
-    "        )`\n",
+    "        )\n",
     "else:\n",
     "    print(\"Data is already spectral, nothing to do\")"
    ]
