--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -30,11 +30,52 @@
     "\n",
     "Lots of different on availabale : https://towardsdatascience.com/a-data-lakes-worth-of-audio-datasets-b45b88cd4ad\n",
     "\n",
-    "\n",
-    "Classification:\n",
-    "https://www.timeseriesclassification.com/dataset.php\n",
+    "Review: \n",
+    "https://arxiv.org/abs/2012.02974\n",
     "\n",
     "Regression : http://tseregression.org/ + https://arxiv.org/pdf/2012.02974"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a8d6272-708d-4709-8e35-5a84268bed64",
+   "metadata": {},
+   "source": [
+    "## Prediction ahead\n",
+    "\n",
+    "Datasets available :\n",
+    "\n",
+    "\n",
+    "* MackeyGlass\n",
+    "* Lorenz\n",
+    "* Sunspot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d51c0238-e4c8-44e3-b93a-0ab2ad3691d5",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from datasets.load_datasets import load_dataset_prediction\n",
+    "is_instances_classification = False\n",
+    "dataset_name = \"Sunspot\"\n",
+    "step_ahead=5\n",
+    "\n",
+    "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test = load_dataset_prediction(dataset_name, step_ahead, visualize=True)\n",
+    "use_spectral_representation = False\n",
+    "spectral_representation = None # Can be None, \"stft\" or \"mfcc\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62039e22-856b-470e-9375-b4295e586564",
+   "metadata": {},
+   "source": [
+    "## Classification"
    ]
   },
   {
@@ -42,7 +83,7 @@
    "id": "16b2d29d-7fff-4032-8b36-559c722818b8",
    "metadata": {},
    "source": [
-    "## Aeon\n",
+    "### Aeon\n",
     "\n",
     "https://www.timeseriesclassification.com/dataset.php\n",
     "\n",
@@ -116,22 +157,20 @@
    "id": "9ceb81c7-9923-4fee-a6ed-98a84b3b7b6f",
    "metadata": {},
    "source": [
-    "## Torchaudio\n",
+    "### Torchaudio\n",
     "\n",
     "https://pytorch.org/audio/stable/datasets.html\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7503d3d-190f-4902-82ca-aae0c2a8d9ea",
+   "cell_type": "raw",
+   "id": "19f79808-e67f-4407-8602-f0c496778c70",
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
    "source": [
     "# load dataset using torchaudio\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
@@ -175,34 +214,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a8d6272-708d-4709-8e35-5a84268bed64",
-   "metadata": {},
-   "source": [
-    "## Prediction ahead\n",
-    "\n",
-    "Datasets available :\n",
-    "\n",
-    "* MackeyGlass\n",
-    "* Lorenz"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "d7f662cc-3f07-4fe8-9caa-23beabb1364b",
-   "metadata": {
-    "scrolled": true
-   },
-   "source": [
-    "from datasets.load_datasets import load_dataset_prediction\n",
-    "is_instances_classification = False\n",
-    "dataset_name = \"MackeyGlass\"\n",
-    "step_ahead=5\n",
-    "\n",
-    "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test = load_dataset_prediction(dataset_name, step_ahead, visualize=True)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a94b219b-eb64-4715-b983-7de3c392f088",
    "metadata": {
     "collapsed": false,
@@ -216,7 +227,7 @@
     "tags": []
    },
    "source": [
-    "## Classification\n",
+    "### Custom\n",
     "\n",
     "Datasets available :\n",
     "\n",
@@ -337,22 +348,24 @@
     "Y_val = []\n",
     "\n",
     "WINDOW_LENGTH = 10\n",
+    "print(\"Not smoothed frequencies\")\n",
     "freq_train_data = X_train_raw\n",
     "flat_train_data = np.concatenate(freq_train_data, axis=0) if is_instances_classification else freq_train_data\n",
-    "extract_peak_frequencies(flat_train_data, sampling_rate, smooth=True, window_length=WINDOW_LENGTH, threshold=1e-5, nperseg=1024, visualize=True)\n",
+    "extract_peak_frequencies(flat_train_data, sampling_rate, smooth=False, threshold=1e-5, nperseg=1024, visualize=True)\n",
     "\n",
+    "print(\"Preprocessing\")\n",
     "for i, (train_index, val_index) in enumerate(splits):\n",
     "    x_train = flexible_indexing(X_train_raw, train_index)\n",
     "    x_val = flexible_indexing(X_train_raw, val_index)\n",
     "    Y_train.append(flexible_indexing(Y_train_raw, train_index))\n",
     "    Y_val.append(flexible_indexing(Y_train_raw, val_index))\n",
     "\n",
+    "\n",
     "    if is_multivariate:\n",
     "        x_train_band, x_val_band = x_train, x_val\n",
     "        del x_train, x_val\n",
-    "\n",
     "        \n",
-    "    # PREPROCESSING        \n",
+    "    # PREPROCESSING\n",
     "    freq_train_data = x_train_band if is_multivariate else x_train\n",
     "    flat_train_data = np.concatenate(freq_train_data, axis=0) if is_instances_classification else freq_train_data\n",
     "    peak_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, smooth=True, window_length=WINDOW_LENGTH, threshold=1e-5, nperseg=1024, visualize=False)\n",
@@ -364,17 +377,17 @@
     "\n",
     "    if not is_multivariate:\n",
     "        x_train_band = generate_multivariate_dataset(\n",
-    "            x_train, sampling_rate, is_instances_classification, peak_freqs, spectral_representation=\"stft\", hop=100\n",
+    "            x_train, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
     "        )\n",
     "        x_val_band = generate_multivariate_dataset(\n",
-    "            x_val, sampling_rate, is_instances_classification, peak_freqs, spectral_representation=\"stft\", hop=100\n",
+    "            x_val, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
     "        )\n",
     "    elif is_multivariate and not use_spectral_representation:\n",
     "        x_train_band = generate_multivariate_dataset(\n",
-    "            x_train, sampling_rate, is_instances_classification, peak_freqs, spectral_representation=None, hop=100\n",
+    "            x_train_band, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
     "        )\n",
     "        x_val_band = generate_multivariate_dataset(\n",
-    "            x_val, sampling_rate, is_instances_classification, peak_freqs, spectral_representation=None, hop=100\n",
+    "            x_val_band, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
     "        )\n",
     "    else:\n",
     "        print(\"Data is already spectral, nothing to do\")\n",
@@ -482,7 +495,7 @@
     "RESERVOIR_SIZE = 500\n",
     "\n",
     "nb_jobs_per_trial = 1\n",
-    "function_name = \"random_ei\" # \"desp\" ou \"hadsp\", \"random\" or \"random_ei\"\n",
+    "function_name = \"random\" # \"desp\" ou \"hadsp\", \"random\" or \"random_ei\"\n",
     "variate_type = \"multi\" # \"multi\" ou \"uni\"\n",
     "if variate_type == \"uni\" and is_multivariate:\n",
     "    raise ValueError(f\"Invalid variable type: {variate_type}\")\n",
@@ -602,7 +615,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "94a7cbad-31bd-49d2-a3c1-00d9ccb6aaab",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import optuna\n",
@@ -627,7 +642,7 @@
     "    study.optimize(objective, n_trials=n_trials)\n",
     "\n",
     "N_TRIALS = 400\n",
-    "n_parallel_studies = 1\n",
+    "n_parallel_studies = 10\n",
     "trials_per_process = N_TRIALS // n_parallel_studies\n",
     "\n",
     "# Use joblib to parallelize the optimization\n",
