Cleanup + visualisation + File for results

--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -294,15 +294,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4fca76d0e06f936c",
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2024-09-11T19:02:18.031478Z",
+     "iopub.status.busy": "2024-09-11T19:02:18.031229Z",
+     "iopub.status.idle": "2024-09-11T19:02:19.161261Z",
+     "shell.execute_reply": "2024-09-11T19:02:19.160826Z",
+     "shell.execute_reply.started": "2024-09-11T19:02:18.031460Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'is_instances_classification' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 18\u001b[0m\n\u001b[1;32m     14\u001b[0m noise_std \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.001\u001b[39m\n\u001b[1;32m     17\u001b[0m nb_splits\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m\n\u001b[0;32m---> 18\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_instances_classification:\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m groups \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     20\u001b[0m         splits \u001b[38;5;241m=\u001b[39m StratifiedKFold(n_splits\u001b[38;5;241m=\u001b[39mnb_splits, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, random_state\u001b[38;5;241m=\u001b[39mSEED)\u001b[38;5;241m.\u001b[39msplit(X_train_raw, np\u001b[38;5;241m.\u001b[39margmax(Y_train_raw, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'is_instances_classification' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import math \n",
     " \n",
@@ -479,7 +498,7 @@
     "\n",
     "#Pretraining\n",
     "from reservoir.reservoir import init_matrices\n",
-    "from connexion_generation.hadsp import run_algorithm\n",
+    "from connexion_generation.hag import run_algorithm\n",
     "from scipy import sparse, stats\n",
     "from numpy import random\n",
     "\n",
