--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -64,11 +64,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0623d316-c5fa-42be-96f7-f19bb59a852b",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "raw",
+   "id": "94221304-8224-40d2-9f4f-392338bc0ef4",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-09-26T14:20:30.749208Z",
+     "iopub.status.busy": "2024-09-26T14:20:30.748443Z"
+    }
+   },
    "source": [
     "from datasets.load_datasets import load_dataset_prediction\n",
     "is_instances_classification = False\n",
@@ -247,18 +250,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "f443da06-cfd7-4e8d-a0f4-1bc154855ddd",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71117010-1878-4e88-8205-1cc8beb26be5",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-09-17T14:06:15.526638Z",
-     "iopub.status.busy": "2024-09-17T14:06:15.526480Z",
-     "iopub.status.idle": "2024-09-17T14:06:16.050545Z",
-     "shell.execute_reply": "2024-09-17T14:06:16.045347Z",
-     "shell.execute_reply.started": "2024-09-17T14:06:15.526628Z"
-    },
     "scrolled": true
    },
+   "outputs": [],
    "source": [
     "from datasets.load_datasets import load_dataset_classification\n",
     "is_instances_classification = True\n",
@@ -269,9 +267,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "f67d6b51-4a03-4443-94f7-6238d056e4e0",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54af5800-8c58-4bd6-a9e2-45d8459536c8",
    "metadata": {},
+   "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(16, 5))\n",
     "ax.plot(range(len(X_train_raw[0])), X_train_raw[0])\n",
@@ -646,10 +646,10 @@
     "    indices = range(x_size)\n",
     "    \n",
     "if not is_multivariate:\n",
-    "    X_pretrain_uni = np.array(X_train)[indices]\n",
-    "    X_pretrain_noisy = np.array(X_train_noisy)[indices]\n",
-    "X_pretrain_band = np.array(X_train_band)[indices]\n",
-    "X_pretrain_band_noisy = np.array(X_train_band_noisy)[indices]\n"
+    "    X_pretrain_uni = np.array(X_train, dtype=object)[indices]\n",
+    "    X_pretrain_noisy = np.array(X_train_noisy, dtype=object)[indices]\n",
+    "X_pretrain_band = np.array(X_train_band, dtype=object)[indices]\n",
+    "X_pretrain_band_noisy = np.array(X_train_band_noisy, dtype=object)[indices]\n"
    ]
   },
   {
@@ -1473,6 +1473,110 @@
     "time_windows = range(len(uds_random))\n",
     "plt.plot(time_windows, uds_random, marker='.', linestyle='-', color='g',  label=\"with same input for random matrice\")\n",
     "plt.ylim(0, max_value)\n",
+    "fontsize=18\n",
+    "ax.spines['top'].set_visible(False)\n",
+    "ax.spines['right'].set_visible(False)\n",
+    "ax.tick_params(axis='both', labelsize=fontsize)\n",
+    "plt.xlabel('Steps', size=fontsize)\n",
+    "plt.ylabel('Average Uncoupled Dynamics', size=fontsize)\n",
+    "plt.legend(fontsize=fontsize)\n",
+    "plt.legend(fontsize=fontsize)\n",
+    "plt.grid(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fc60097-34c7-4c5e-9ff9-a4e50bd8cee0",
+   "metadata": {},
+   "source": [
+    "### LUD True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b26f9bf-810b-49f6-8b80-d56f49aa55c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(state_history_hag).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08a6a8db-77c0-461e-b65a-319a9fa362b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import analysis.richness\n",
+    "reload(analysis.richness)\n",
+    "from analysis.richness import eigen_value_spread\n",
+    "num_windows = 150\n",
+    "\n",
+    "uds_hag = eigen_value_spread(np.array(state_history_hag), num_windows=num_windows, theta=0.9)\n",
+    "uds_multi = eigen_value_spread(np.array(states_history_multi), num_windows=num_windows, theta=0.9)\n",
+    "\n",
+    "max_value = np.max([np.max(uds_hag), np.max(uds_hag)])\n",
+    "\n",
+    "# Plotting the mean correlations with the standard deviation area\n",
+    "fig, ax = plt.subplots(figsize=(10, 5))\n",
+    "\n",
+    "time_windows = range(len(uds_hag))\n",
+    "plt.plot(range(len(uds_hag)), uds_hag, marker='.', linestyle='-', color='r',  label=\"during training\")\n",
+    "plt.plot(range(len(uds_multi)), uds_multi, marker='.', linestyle='-', color='b',  label=\"with same input after training\")\n",
+    "plt.ylim(0, max_value)\n",
+    "fontsize=18\n",
+    "ax.spines['top'].set_visible(False)\n",
+    "ax.spines['right'].set_visible(False)\n",
+    "ax.tick_params(axis='both', labelsize=fontsize)\n",
+    "plt.xlabel('Steps', size=fontsize)\n",
+    "plt.ylabel('Average Uncoupled Dynamics', size=fontsize)\n",
+    "plt.legend(fontsize=fontsize)\n",
+    "plt.legend(fontsize=fontsize)\n",
+    "plt.grid(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "447c8fce-80db-4d55-87b6-02a14002da9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "window_data = np.array(state_history_hag).T[:, 1000:2000]\n",
+    "window_data_std = (window_data - np.mean(window_data, axis=0)) / np.std(window_data, axis=0)\n",
+    "\n",
+    "U, S, Vt = np.linalg.svd(window_data_std, full_matrices=False)\n",
+    "\n",
+    "# Calculate the normalized relevance R_j\n",
+    "R = S / np.sum(S)\n",
+    "\n",
+    "# Cumulative sum of R_j\n",
+    "cumulative_R = np.cumsum(R)\n",
+    "\n",
+    "# Find the minimum d such that the cumulative sum >= theta\n",
+    "num_components = np.searchsorted(cumulative_R, 0.9) + 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4086ba68-ffa6-404b-81c4-3c553e92c135",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import analysis.richness\n",
+    "reload(analysis.richness)\n",
+    "from analysis.richness import uncoupled_dynamics\n",
+    "\n",
+    "uds_random = eigen_value_spread(np.array(states_history_random),  num_windows=num_windows, theta=0.9)\n",
+    "\n",
+    "# Plotting the mean correlations with the standard deviation area\n",
+    "fig, ax = plt.subplots(figsize=(10, 5))\n",
+    "\n",
+    "time_windows = range(len(uds_random))\n",
+    "plt.plot(time_windows, uds_random, marker='.', linestyle='-', color='g',  label=\"with same input for random matrice\")\n",
     "fontsize=18\n",
     "ax.spines['top'].set_visible(False)\n",
     "ax.spines['right'].set_visible(False)\n",
@@ -2328,7 +2432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
