Unify dataset loading

--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -60,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "from datasets.load_datasets import load_dataset_prediction\n",
+    "from datasets.load_prediction import load_dataset_prediction\n",
     "is_instances_classification = False\n",
     "dataset_name = \"Sunspot\"\n",
     "step_ahead=5\n",
@@ -93,17 +93,35 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "52b1d405-d77a-4b4f-b00e-0ea1d0ef9981",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8d4ff444-2f3d-4e84-bda5-fae897974707",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-05T13:21:20.203250Z",
-     "iopub.status.busy": "2024-09-05T13:21:20.203116Z",
-     "iopub.status.idle": "2024-09-05T13:21:21.174397Z",
-     "shell.execute_reply": "2024-09-05T13:21:21.174105Z",
-     "shell.execute_reply.started": "2024-09-05T13:21:20.203241Z"
+     "iopub.execute_input": "2024-10-03T10:42:07.202255Z",
+     "iopub.status.busy": "2024-10-03T10:42:07.201736Z",
+     "iopub.status.idle": "2024-10-03T10:43:45.609717Z",
+     "shell.execute_reply": "2024-10-03T10:43:45.609266Z",
+     "shell.execute_reply.started": "2024-10-03T10:42:07.202222Z"
     }
    },
+   "outputs": [
+    {
+     "ename": "IncompleteRead",
+     "evalue": "IncompleteRead(36467456 bytes read, 17612995 more expected)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIncompleteRead\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LabelEncoder, OneHotEncoder\n\u001b[1;32m      4\u001b[0m dataset_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCatsDogs\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 6\u001b[0m X_train_unprocessed, Y_train_raw, meta_data \u001b[38;5;241m=\u001b[39m \u001b[43mload_classification\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreturn_metadata\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mload_equal_length\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msplit\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtrain\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m X_test_unprocessed, Y_test_raw, meta_data \u001b[38;5;241m=\u001b[39m load_classification(dataset_name, return_metadata\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, load_equal_length \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, split\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m is_instances_classification \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/hadsp_env/lib/python3.11/site-packages/aeon/datasets/_data_loaders.py:1371\u001b[0m, in \u001b[0;36mload_classification\u001b[0;34m(name, split, extract_path, return_metadata, load_equal_length, load_no_missing)\u001b[0m\n\u001b[1;32m   1369\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1370\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1371\u001b[0m         \u001b[43m_download_and_extract\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1372\u001b[0m \u001b[43m            \u001b[49m\u001b[43murl\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1373\u001b[0m \u001b[43m            \u001b[49m\u001b[43mextract_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mextract_path\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1374\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1375\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m zipfile\u001b[38;5;241m.\u001b[39mBadZipFile:\n\u001b[1;32m   1376\u001b[0m         try_zenodo \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/hadsp_env/lib/python3.11/site-packages/aeon/datasets/_data_loaders.py:471\u001b[0m, in \u001b[0;36m_download_and_extract\u001b[0;34m(url, extract_path)\u001b[0m\n\u001b[1;32m    469\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m urlopen(url, timeout\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m60\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m response:\n\u001b[1;32m    470\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(zip_file_name, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m out_file:\n\u001b[0;32m--> 471\u001b[0m         out_file\u001b[38;5;241m.\u001b[39mwrite(\u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    472\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m extract_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    473\u001b[0m     extract_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(MODULE, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlocal_data/\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m file_name\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m0\u001b[39m])\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/hadsp_env/lib/python3.11/http/client.py:489\u001b[0m, in \u001b[0;36mHTTPResponse.read\u001b[0;34m(self, amt)\u001b[0m\n\u001b[1;32m    487\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    488\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 489\u001b[0m         s \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_safe_read\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlength\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    490\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m IncompleteRead:\n\u001b[1;32m    491\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_close_conn()\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/hadsp_env/lib/python3.11/http/client.py:640\u001b[0m, in \u001b[0;36mHTTPResponse._safe_read\u001b[0;34m(self, amt)\u001b[0m\n\u001b[1;32m    638\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfp\u001b[38;5;241m.\u001b[39mread(amt)\n\u001b[1;32m    639\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(data) \u001b[38;5;241m<\u001b[39m amt:\n\u001b[0;32m--> 640\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m IncompleteRead(data, amt\u001b[38;5;241m-\u001b[39m\u001b[38;5;28mlen\u001b[39m(data))\n\u001b[1;32m    641\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m data\n",
+      "\u001b[0;31mIncompleteRead\u001b[0m: IncompleteRead(36467456 bytes read, 17612995 more expected)"
+     ]
+    }
+   ],
    "source": [
     "from aeon.datasets import load_classification\n",
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
@@ -163,14 +181,16 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "19f79808-e67f-4407-8602-f0c496778c70",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "767bae36-44ef-4582-9bd8-b8220097e1d8",
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
+   "outputs": [],
    "source": [
     "# load dataset using torchaudio\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
