--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -83,190 +83,41 @@
    "id": "16b2d29d-7fff-4032-8b36-559c722818b8",
    "metadata": {},
    "source": [
-    "### Aeon\n",
+    "Datasets available :\n",
     "\n",
-    "https://www.timeseriesclassification.com/dataset.php\n",
+    "* Custom :  FSDD, HAART, JapaneseVowels\n",
+    "* Aeon : SpokenArabicDigits, CatsDogs, LSST\n",
+    "* Torchaudio: SPEECHCOMMANDS\n",
     "\n",
-    "* SpokenArabicDigits\n",
-    "* CatsDogs\n",
-    "* LSST"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "8d4ff444-2f3d-4e84-bda5-fae897974707",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-10-03T10:42:07.202255Z",
-     "iopub.status.busy": "2024-10-03T10:42:07.201736Z",
-     "iopub.status.idle": "2024-10-03T10:43:45.609717Z",
-     "shell.execute_reply": "2024-10-03T10:43:45.609266Z",
-     "shell.execute_reply.started": "2024-10-03T10:42:07.202222Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "IncompleteRead",
-     "evalue": "IncompleteRead(36467456 bytes read, 17612995 more expected)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIncompleteRead\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LabelEncoder, OneHotEncoder\n\u001b[1;32m      4\u001b[0m dataset_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCatsDogs\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 6\u001b[0m X_train_unprocessed, Y_train_raw, meta_data \u001b[38;5;241m=\u001b[39m \u001b[43mload_classification\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreturn_metadata\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mload_equal_length\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msplit\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtrain\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m X_test_unprocessed, Y_test_raw, meta_data \u001b[38;5;241m=\u001b[39m load_classification(dataset_name, return_metadata\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, load_equal_length \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, split\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m is_instances_classification \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/hadsp_env/lib/python3.11/site-packages/aeon/datasets/_data_loaders.py:1371\u001b[0m, in \u001b[0;36mload_classification\u001b[0;34m(name, split, extract_path, return_metadata, load_equal_length, load_no_missing)\u001b[0m\n\u001b[1;32m   1369\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1370\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1371\u001b[0m         \u001b[43m_download_and_extract\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1372\u001b[0m \u001b[43m            \u001b[49m\u001b[43murl\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1373\u001b[0m \u001b[43m            \u001b[49m\u001b[43mextract_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mextract_path\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1374\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1375\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m zipfile\u001b[38;5;241m.\u001b[39mBadZipFile:\n\u001b[1;32m   1376\u001b[0m         try_zenodo \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/hadsp_env/lib/python3.11/site-packages/aeon/datasets/_data_loaders.py:471\u001b[0m, in \u001b[0;36m_download_and_extract\u001b[0;34m(url, extract_path)\u001b[0m\n\u001b[1;32m    469\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m urlopen(url, timeout\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m60\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m response:\n\u001b[1;32m    470\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(zip_file_name, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m out_file:\n\u001b[0;32m--> 471\u001b[0m         out_file\u001b[38;5;241m.\u001b[39mwrite(\u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    472\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m extract_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    473\u001b[0m     extract_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(MODULE, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlocal_data/\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m file_name\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m0\u001b[39m])\n",
-      "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/hadsp_env/lib/python3.11/http/client.py:489\u001b[0m, in \u001b[0;36mHTTPResponse.read\u001b[0;34m(self, amt)\u001b[0m\n\u001b[1;32m    487\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    488\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 489\u001b[0m         s \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_safe_read\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlength\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    490\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m IncompleteRead:\n\u001b[1;32m    491\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_close_conn()\n",
-      "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/hadsp_env/lib/python3.11/http/client.py:640\u001b[0m, in \u001b[0;36mHTTPResponse._safe_read\u001b[0;34m(self, amt)\u001b[0m\n\u001b[1;32m    638\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfp\u001b[38;5;241m.\u001b[39mread(amt)\n\u001b[1;32m    639\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(data) \u001b[38;5;241m<\u001b[39m amt:\n\u001b[0;32m--> 640\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m IncompleteRead(data, amt\u001b[38;5;241m-\u001b[39m\u001b[38;5;28mlen\u001b[39m(data))\n\u001b[1;32m    641\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m data\n",
-      "\u001b[0;31mIncompleteRead\u001b[0m: IncompleteRead(36467456 bytes read, 17612995 more expected)"
-     ]
-    }
-   ],
-   "source": [
-    "from aeon.datasets import load_classification\n",
-    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
-    "\n",
-    "dataset_name = \"CatsDogs\"\n",
-    "\n",
-    "X_train_unprocessed, Y_train_raw, meta_data = load_classification(dataset_name, return_metadata=True, load_equal_length = False, split=\"train\")\n",
-    "X_test_unprocessed, Y_test_raw, meta_data = load_classification(dataset_name, return_metadata=True, load_equal_length = False, split=\"test\")\n",
-    "\n",
-    "is_instances_classification = True\n",
-    "sampling_rate = 10000\n",
-    "\n",
-    "groups = None\n",
-    "\n",
-    "X_train_raw = []\n",
-    "for x in X_train_unprocessed:\n",
-    "    X_train_raw.append(x.T)\n",
-    "\n",
-    "X_test_raw = []\n",
-    "for x in X_test_unprocessed:\n",
-    "    X_test_raw.append(x.T)\n",
-    "\n",
-    "if X_train_raw[0].shape[1] == 1:\n",
-    "    is_multivariate = False\n",
-    "    use_spectral_representation = False\n",
-    "else:\n",
-    "    is_multivariate = True\n",
-    "    use_spectral_representation = True\n",
-    "\n",
-    "spectral_representation = \"mfcc\" # Can be None, \"stft\" or \"mfcc\"\n",
-    "\n",
-    "print(\" Number of instances = \", len(X_train_raw))\n",
-    "print(\" Shape of X = \", X_train_raw[0].shape)\n",
-    "print(\" Shape of y = \", Y_train_raw.shape)\n",
-    "\n",
-    "print(\" Meta data = \", meta_data)\n",
-    "print(\"Multivariate = \", is_multivariate)\n",
-    "\n",
-    "le = LabelEncoder()\n",
-    "Y_train_raw = le.fit_transform(Y_train_raw).reshape(-1, 1)\n",
-    "Y_test = le.transform(Y_test_raw).reshape(-1, 1)\n",
-    "\n",
-    "# One-hot encode the labels\n",
-    "ohe = OneHotEncoder(sparse_output=False)\n",
-    "Y_train_raw = ohe.fit_transform(Y_train_raw.reshape(-1, 1))\n",
-    "Y_test = ohe.transform(Y_test.reshape(-1, 1))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9ceb81c7-9923-4fee-a6ed-98a84b3b7b6f",
-   "metadata": {},
-   "source": [
-    "### Torchaudio\n",
-    "\n",
-    "https://pytorch.org/audio/stable/datasets.html\n"
+    "More on https://www.timeseriesclassification.com/dataset.php or https://pytorch.org/audio/stable/datasets.html"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "767bae36-44ef-4582-9bd8-b8220097e1d8",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "id": "76d77234-56ae-4370-a931-9d698ac41286",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# load dataset using torchaudio\n",
-    "from sklearn.model_selection import StratifiedShuffleSplit\n",
-    "from torchaudio.datasets import VoxCeleb1Identification, SPEECHCOMMANDS\n",
-    "from torch.utils.data import ConcatDataset, random_split, DataLoader\n",
-    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
-    "\n",
-    "dataset_name = \"SPEECHCOMMANDS\"\n",
-    "\n",
-    "dataset_train = SPEECHCOMMANDS(root=\"datasets/\", download=True, subset=\"training\")\n",
-    "dataset_val = SPEECHCOMMANDS(root=\"datasets/\", download=True, subset=\"validation\")\n",
-    "\n",
-    "sampling_rate = dataset_train[0][1]\n",
-    "\n",
-    "dataset = ConcatDataset([dataset_train, dataset_val])\n",
-    "\n",
-    "def process_sample(sample):\n",
-    "    X = sample[0][0].numpy().reshape(-1, 1)\n",
-    "    Y = sample[2]\n",
-    "    group = sample[3]\n",
-    "    return X, Y, group\n",
-    "\n",
-    "results = Parallel(n_jobs=-1)(delayed(process_sample)(sample) for sample in tqdm(dataset))\n",
-    "X_train_raw, Y_train_raw, groups = zip(*results)\n",
-    "X_train_raw = list(X_train_raw)\n",
-    "Y_train_raw = list(Y_train_raw)\n",
-    "groups = list(groups)\n",
-    "\n",
-    "is_multivariate = False\n",
-    "use_spectral_representation = False\n",
+    "from datasets.load_classification import load_dataset_classification\n",
     "is_instances_classification = True\n",
+    "spectral_representation = \"mfcc\"  # Can be None, \"stft\" or \"mfcc\"\n",
     "\n",
-    "le = LabelEncoder()\n",
-    "Y_train_raw = le.fit_transform(Y_train_raw).reshape(-1, 1)\n",
-    "\n",
-    "# One-hot encode the labels\n",
-    "ohe = OneHotEncoder(sparse_output=False)\n",
-    "Y_train_raw = ohe.fit_transform(Y_train_raw.reshape(-1, 1))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a94b219b-eb64-4715-b983-7de3c392f088",
-   "metadata": {
-    "collapsed": false,
-    "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "### Custom\n",
-    "\n",
-    "Datasets available :\n",
-    "\n",
-    "* FSDD\n",
-    "* HAART\n",
-    "* JapaneseVowels"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "d51fcfae-ee2f-4e89-bb73-6160d3874d99",
-   "metadata": {},
-   "source": [
-    "from datasets.load_datasets import load_dataset_classification\n",
-    "is_instances_classification = True\n",
     "dataset_name = \"FSDD\"\n",
     "\n",
     "use_spectral_representation, is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)\n",
-    "spectral_representation = \"mfcc\" # Can be None, \"stft\" or \"mfcc\""
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(16, 5))\n",
+    "ax.plot(range(len(X_train_raw[0])), X_train_raw[0])\n",
+    "ax.spines['top'].set_visible(False)\n",
+    "ax.spines['right'].set_visible(False)\n",
+    "fontsize=30\n",
+    "ax.tick_params(axis='both', labelsize=fontsize)\n",
+    "plt.xlabel('Time', size=fontsize)\n",
+    "plt.ylabel('Value', size=fontsize)\n",
+    "plt.legend(fontsize=fontsize)\n",
+    "plt.show()"
    ]
   },
   {
